# pytest_hike

./: .python-version  presentation.html  presentation.md  pyproject.toml
examples/ex_01/: main.py  test.py
examples/ex_02/: conftest.py  main.py  test.py  test_conftest.py  test_mock.py
examples/ex_02/prof/: combined.prof  test_add_numbers.prof  test_random_cat_fact.prof
examples/ex_03/: tests.py
examples/ex_04/: conftest.py  main.py  misc_tests.py
