[tool.poetry]
name = "pytest-hike"
version = "0.1.0"
description = ""
authors = ["itxasos23 <itxaso.aizpurualanas@zurich.com>"]
readme = "README.md"
packages = [{include = "pytest_hike"}]

[tool.poetry.dependencies]
python = "^3.11"
icecream = "^2.1.3"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
